--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <title>{% block title %} Site {% endblock %}</title>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+
     {% block content %} Content {% endblock %}
 </body>
 </html>
