--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -1,27 +1,48 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Sign Up - Simple chat{% endblock %}
 
 {% block content %}
+
+
+<div>
+<nav id="upper-nav">
+    <div class="flex">
+        <a class="nav-element nav-link" href="/"><span>Simple Chat</span></a>
+    </div>
+    <div class="flex">
+        <a class="nav-element nav-link" href="/login"><span>Log In</span></a>
+        <a class="nav-element nav-link" href="/signup"><span>Sign Up</span></a>
+    </div>
+</nav>
+
+<main id="main-page">
 
 {% for cat, message in get_flashed_messages(True) %}
     {{cat.capitalize()}}: {{message}}
 {% endfor %}
 
-<form action="" method="POST">
-    {{form.hidden_tag()}}
-    {% for field in form if field.name not in ['csrf_token', 'submit'] %}
-        <p>{{field.label()}} {{field()}}
-        {% if field.errors %}
-            <span>
-                {% for e in field.errors %}
-                    {{e}}
-                {% endfor %}
-            </span>
-        {% endif %}
-        </p>
-    {% endfor %}
-    <p>{{form.submit()}}
-</form>
+<div id="login-form">
+    <form action="" method="POST">
+        {{form.hidden_tag()}}
+        {% for field in form if field.name not in ['csrf_token', 'submit'] %}
+            <p>{{field.label()}} {{field()}}
+            {% if field.errors %}
+                <span>
+                    {% for e in field.errors %}
+                        {{e}}
+                    {% endfor %}
+                </span>
+            {% endif %}
+            </p>
+        {% endfor %}
+        <p>{{form.submit()}}
+    </form>
+</div>
+
+</main>
+    
+</div>
+
 
 {% endblock %}
